<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>


    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.2.7.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.sf.saas.bsp</groupId>
    <artifactId>saas-bsp-rule-service</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>saas-bsp-rule-service</name>
    <description>saas-bsp-rule-service project for Spring Boot</description>

    <properties>
        <!-- Build args -->
        <!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline> -->
        <java.version>1.8</java.version>
        <file_encoding>UTF-8</file_encoding>
        <project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${file_encoding}</project.reporting.outputEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.test.skip>true</maven.test.skip>
        <skip_maven_deploy>false</skip_maven_deploy>
        <!-- url -->
        <issue.jira.url>http://10.0.137.95:8088/secure/Dashboard.jspa</issue.jira.url>
        <ci.url>http://10.118.46.12:8080/jenkins/job/${project.artifactId}</ci.url>
        <scm.source.url>http://10.0.137.95:7990/projects/CO-NIR/repos/</scm.source.url>
        <scm.source.connection>scm:git:http://10.0.137.95:7990/projects/CO-NIR/</scm.source.connection>
        <site.deploy.url>file:/usr/local/apache-tomcat-7.0.54/webapps/site/${project.artifactId}</site.deploy.url>

        <org.apache.httpcomponents.version>4.5.3</org.apache.httpcomponents.version>
        <mcs.cas.core.lib>1.0.4</mcs.cas.core.lib>
        <com.fasterxml.jackson.core.version>2.9.2</com.fasterxml.jackson.core.version>
        <druid.version>1.1.21</druid.version>
        <zookeeper.version>3.4.6</zookeeper.version>
        <zkClient.version>0.11</zkClient.version>
        <dubbo.spring.starter.version>2.7.5</dubbo.spring.starter.version>
        <mybatis.starter.version>2.1.1</mybatis.starter.version>
        <mybatis.pagehelper.version>1.2.13</mybatis.pagehelper.version>
        <commons-collections.version>3.2.2</commons-collections.version>
        <sf.dubbo.version>sf.2.1.0</sf.dubbo.version>
        <mq-client-version>1.3.3-4</mq-client-version>
        <curator.version>4.2.0</curator.version>
        <beanutils.version>1.9.4</beanutils.version>
        <dropwizard-metrics.version>4.1.0-rc0</dropwizard-metrics.version>

        <!--        <maven.compiler.source>8</maven.compiler.source>-->
        <!--        <maven.compiler.target>8</maven.compiler.target>-->
        <spring.version>2.2.7.RELEASE</spring.version>
        <spring.cloud.version>Hoxton.SR8</spring.cloud.version>
        <spring.cloud.alibaba.version>2.2.7.RELEASE</spring.cloud.alibaba.version>
        <spring.cloud.component.version>2.2.6.RELEASE</spring.cloud.component.version>
        <spring.context.version>5.2.15.RELEASE</spring.context.version>
        <swagger.version>1.9.0.RELEASE</swagger.version>
        <hutool.version>5.7.18</hutool.version>
        <fastjson.version>1.2.75</fastjson.version>
        <mybatis-plus.version>3.4.2</mybatis-plus.version>
        <commons-lang.version>3.4</commons-lang.version>
        <druid.version>1.1.10</druid.version>
        <mysql-connector.version>8.0.22</mysql-connector.version>
        <jaspty.version>3.0.3</jaspty.version>
        <swagger.model.version>1.5.21</swagger.model.version>
        <redisson.version>3.16.1</redisson.version>
        <okhttp.version>11.0</okhttp.version>
        <apollo.version>1.4.0</apollo.version>
        <sentinel.datasource.apollo.version>1.6.0</sentinel.datasource.apollo.version>
        <jakarta.servlet-api.version>4.0.4</jakarta.servlet-api.version>
        <lombok.version>1.18.20</lombok.version>
        <pagehelper.version>1.3.0</pagehelper.version>

    </properties>

    <modules>
        <module>saas-bsp-rule-business</module>
        <module>saas-bsp-rule-core</module>
    </modules>






    <!--    基础依赖-->
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <!-- swagger 文档 -->
        <dependency>
            <groupId>com.spring4all</groupId>
            <artifactId>swagger-spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-annotations</artifactId>
        </dependency>
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-models</artifactId>
        </dependency>

        <dependency>
            <groupId>com.github.ulisesbocchio</groupId>
            <artifactId>jasypt-spring-boot-starter</artifactId>
            <version>${jaspty.version}</version>
        </dependency>

        <!-- swagger knife4j UI -->
        <dependency>
            <groupId>com.github.xiaoymin</groupId>
            <artifactId>knife4j-spring-boot-starter</artifactId>
            <exclusions>
                <exclusion>
                    <artifactId>springfox-bean-validators</artifactId>
                    <groupId>io.springfox</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spring-plugin-core</artifactId>
                    <groupId>org.springframework.plugin</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spring-plugin-metadata</artifactId>
                    <groupId>org.springframework.plugin</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>springfox-spi</artifactId>
                    <groupId>io.springfox</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>springfox-spring-web</artifactId>
                    <groupId>io.springfox</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>springfox-swagger2</artifactId>
                    <groupId>io.springfox</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>swagger-models</artifactId>
                    <groupId>io.swagger</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.14</version>
        </dependency>

    </dependencies>

<!--    版本管理-->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring.version}</version>
                <exclusions>
                    <!-- 去除Tomcat容器 -->
                    <exclusion>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-starter-tomcat</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-context</artifactId>
                <version>${spring.cloud.alibaba.version}</version>
            </dependency>
            <!-- 单元测试 -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-actuator</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <!-- spring cloud -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring.cloud.alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- openfeign -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-openfeign</artifactId>
                <version>${spring.cloud.component.version}</version>
            </dependency>
            <!-- nacos -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
                <version>${spring.cloud.component.version}</version>
            </dependency>
            <!-- sentinel -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
                <version>${spring.cloud.component.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.csp</groupId>
                <artifactId>sentinel-datasource-apollo</artifactId>
                <version>${sentinel.datasource.apollo.version}</version>
            </dependency>
            <!-- okhttp -->
            <dependency>
                <groupId>io.github.openfeign</groupId>
                <artifactId>feign-okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <!-- swagger 文档 -->
            <dependency>
                <groupId>com.spring4all</groupId>
                <artifactId>swagger-spring-boot-starter</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger.model.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger</groupId>
                <artifactId>swagger-models</artifactId>
                <version>${swagger.model.version}</version>
            </dependency>
            <!-- swagger knife4j UI -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-spring-boot-starter</artifactId>
                <exclusions>
                    <exclusion>
                        <artifactId>springfox-bean-validators</artifactId>
                        <groupId>io.springfox</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>spring-plugin-core</artifactId>
                        <groupId>org.springframework.plugin</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>spring-plugin-metadata</artifactId>
                        <groupId>org.springframework.plugin</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>springfox-spi</artifactId>
                        <groupId>io.springfox</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>springfox-spring-web</artifactId>
                        <groupId>io.springfox</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>springfox-swagger2</artifactId>
                        <groupId>io.springfox</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>swagger-models</artifactId>
                        <groupId>io.swagger</groupId>
                    </exclusion>
                </exclusions>
                <version>2.0.8</version>
            </dependency>
            <!-- mybatis plus 插件 -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <!-- 阿里数据库连接池 -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <!-- 数据库驱动 -->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql-connector.version}</version>
            </dependency>
            <!-- jaspty加密 -->
            <dependency>
                <groupId>com.github.ulisesbocchio</groupId>
                <artifactId>jasypt-spring-boot-starter</artifactId>
                <version>${jaspty.version}</version>
            </dependency>
            <!-- redisson -->
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson</artifactId>
                <version>${redisson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ctrip.framework.apollo</groupId>
                <artifactId>apollo-client</artifactId>
                <version>${apollo.version}</version>
            </dependency>

            <!-- mybatis-plus生成器默认版本依赖 -->
            <dependency>
                <groupId>org.apache.velocity</groupId>
                <artifactId>velocity-engine-core</artifactId>
                <version>2.0</version>
            </dependency>
            <!-- mybatis-plus生成器 -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-generator</artifactId>
                <version>3.3.2</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-extension</artifactId>
                <version>3.4.2</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>30.0-jre</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>5.8.9</version>
            </dependency>

            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.14</version>
            </dependency>
            <!-- 引入配置中心 -->
            <dependency>
                <groupId>com.ctrip.framework.apollo</groupId>
                <artifactId>apollo-client</artifactId>
                <version>1.5.0</version>
                <exclusions>
                    <exclusion>
                        <artifactId>guava</artifactId>
                        <groupId>com.google.guava</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
    </dependencyManagement>



<!--    <profiles>-->
<!--        <profile>-->
<!--            <id>dev</id>-->
<!--            <activation>-->
<!--                <activeByDefault>false</activeByDefault>-->
<!--            </activation>-->
<!--            <properties>-->
<!--                <env>dev</env>-->
<!--                <skipAssemblyDEV>false</skipAssemblyDEV>-->
<!--                <skipAssemblyUAT>true</skipAssemblyUAT>-->
<!--                <skipAssemblyPROD>true</skipAssemblyPROD>-->
<!--            </properties>-->
<!--        </profile>-->
<!--        <profile>-->
<!--            <id>uat</id>-->
<!--            <activation>-->
<!--                <activeByDefault>false</activeByDefault>-->
<!--            </activation>-->
<!--            <properties>-->
<!--                <env>uat</env>-->
<!--                <skipAssemblyDEV>true</skipAssemblyDEV>-->
<!--                <skipAssemblyUAT>false</skipAssemblyUAT>-->
<!--                <skipAssemblyPROD>true</skipAssemblyPROD>-->
<!--            </properties>-->
<!--        </profile>-->
<!--        <profile>-->
<!--            <id>prod</id>-->
<!--            <activation>-->
<!--                <activeByDefault>false</activeByDefault>-->
<!--            </activation>-->
<!--            <properties>-->
<!--                <env>prod</env>-->
<!--                <skipAssemblyDEV>true</skipAssemblyDEV>-->
<!--                <skipAssemblyUAT>true</skipAssemblyUAT>-->
<!--                <skipAssemblyPROD>false</skipAssemblyPROD>-->
<!--            </properties>-->
<!--        </profile>-->
<!--    </profiles>-->

</project>
